--- a/public/css/verify.css
+++ b/public/css/verify.css
@@ -1,30 +1,96 @@
 .move-to.left-verify {
     font-size: 43px;
+    text-align: center;
     position: relative;
-    margin-left: 37%;
-    margin-right: 37%;
     color: #ff5515;
 }
 .move-to-center-verify {
     position: relative;
-    margin-left: 30%;
-    margin-right: 30%;
     font-size: 25px;
+    text-align: center;
 }
 
 button.btn.btn-link.p-0.m-0.align-baseline {
     background-color: #333131;
     border: none;
     color: white;
-    padding: 15px 32px;
+    padding: 10px 15px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
     position: relative;
-    left: 21rem;
-    bottom: 2rem;
+    text-decoration-line: underline;
+    border-radius: 3px;
+}
+.card {
+    margin: auto;
+    width: 90%;
+}
+.col-md-8 {
+    display: block;
+    justify-content: center;
+    width: 100%;
 }
 button.btn.btn-link.p-0.m-0.align-baseline:hover {
     background-color: rgb(23, 24, 23);
+}
+
+@media only screen and (max-width: 1024px){
+    .move-to-center-verify {
+        font-size: 28px;
+    }
+    button.btn.btn-link.p-0.m-0.align-baseline {
+        font-size: 20px;
+    }
+}    
+@media only screen and (max-width: 800px){
+    .move-to.left-verify {
+        font-size: 28px;
+    }
+    .move-to-center-verify {
+        font-size: 20px;
+    }
+    button.btn.btn-link.p-0.m-0.align-baseline {
+        font-size: 13px;
+    }
+}     
+@media only screen and (max-width: 424px){
+    .move-to.left-verify {
+        font-size: 26px;
+        margin: 0;
+        padding: 10px;
+    }    
+    .move-to-center-verify {
+        margin-top: 10px;
+        font-size: 22px;
+        text-align: center;
+        margin: 0;
+    }
+    button.btn.btn-link.p-0.m-0.align-baseline {    
+        left: unset;
+        bottom: unset;
+    }
+}
+@media only screen and (max-width: 354px){
+    .move-to.left-verify {
+        font-size: 24px;
+    }
+    .move-to-center-verify {
+        font-size: 19px;
+    }
+    button.btn.btn-link.p-0.m-0.align-baseline {
+        font-size: 15px;
+    }
+}
+@media only screen and (max-width: 327px){
+    .move-to.left-verify {
+        font-size: 22px;
+    }
+    .move-to-center-verify {
+        font-size: 19px;
+    }
+    button.btn.btn-link.p-0.m-0.align-baseline {
+        font-size: 15px;
+    }
 }
