--- a/public/css/checkout.css
+++ b/public/css/checkout.css
@@ -405,7 +405,7 @@ input.py-btn {
  
 @media only screen and (max-width: 1024px){
 input {
-    height: 55px;
+    /*height: 55px;*/
 }
 .summary {
   width: 41%;
